example-app/example-php-docker-helloworld-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-php-docker-helloworld
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: example-php-docker-helloworld
