example-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-example
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: simple-example
  type: ClusterIP
