example-app/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-example
spec:
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: simple-example
